--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  background: rgb(88, 117, 245);
+  background: #e74c3c;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -10,11 +10,12 @@
 .header {
   height:4rem;
   width:100%;
-  border-bottom: 2px solid white;
   display:flex;
   align-items: center;
   padding: 0 1rem;
-  background: rgba(255,255,255,0.3);
+  /*background: rgba(255,255,255,0.3);*/
+  background: linear-gradient(to right, #000000, #e74c3c);
+  box-shadow: 2px 2px 7px 2px rgb(0, 0, 0);
 }
 
 .logo {
@@ -25,44 +26,30 @@
   background-size: cover;
   background-repeat: no-repeat;
   border-radius: 50%;
-  border: 1px solid white;
+  /*border: 1px solid white;*/
 }
 
 .title {
-  color: white;
+  color: #e74c3c;
   font-weight: bold;
   font-size: 2rem;
   margin-left: 1rem;
 }
 
-.footer {
-  height:4rem;
-  width:100%;
-  border-bottom: 2px solid white;
-  display:flex;
-  align-items:center;
-  padding: 0 1rem;
-  background: rgba(255,255,255,0.3);
-  position: relative;
+.messages {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: flex-start;
+  overflow: auto;
+  max-height: calc(100vh - 4 rem - 4rem);
+  min-height: calc(100vh - 4 rem - 4rem);
+  padding: 1rem;
 }
 
-.text-input {
-  width: 100%;
-  border:1px solid white;
-  height: 2rem;
-  border-radius: 1rem;
-  padding: 0 1rem;
-  background: black;
+.message {
   color: white;
-}
-
-.send{
-  background: white;
-  border-radius: 50%;
-  border:none;
-  height: 1.7rem;
-  width: 1.7rem;
-  position: absolute;
-  right: 1.15rem;
-  cursor: pointer;
+  background: black;
+  padding: 0.5rem 1rem;
+  margin: 0.2rem;
+  border-radius: 0.3rem;
 }
